--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   outline: none;
   list-style: none;
   text-decoration: none;
-  font-family: 'monospace', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 p{
@@ -19,7 +19,7 @@ p{
 h1.title{
   margin-bottom: 20px;
   color: #444444;
-  font-family: 'monospace';
+  font-family: 'Josefin Sans';
   text-transform: uppercase;
   word-spacing: 25px;
   letter-spacing: 5px;
